# finlaw-regcheck-agent

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
agent/: classifier.py  judge.py  memory.py  pipeline.py
agent/prompts/: judge_v1.0.md  judge_v2.0.md  judge_v2.1.md
data/demo/: scenarios.jsonl
data/eval/: labeling_criteria.md  w06_queries.txt  w07_eval.jsonl  w07_results.json  w08_experiment_results.md  w08_holdout.jsonl  w09_poc_results.md
data/index/: meta.json
docs/: RegCheck_프로젝트명세서.md  W09_온프레미스_아키텍처.md  W10_데모_시나리오.md
docs/decisions/: 0001-law-pdf-parsing-strategy.md  0002-principle-tagging-scope.md  0003-embedding-model-3-large.md  0004-eval-labels-follow-regulatory-chain.md  0005-judge-retrieval-and-call-structure.md  0006-judge-v2-and-gpt41.md  0007-fp-gate-and-verdict-cache.md  0008-user-supplied-input-type.md  0009-local-serving-poc.md
guardrails/: masking.py  verify.py
logging_/: audit.py
rag/: config.py  ingest.py  retriever.py
scripts/: judge_eval.py  judge_experiment.py  search_demo.py  w08_dod.py  w09_poc_embed.py  w09_poc_judge.py
