[project]
name = "regcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "numpy>=2.4.6",
    "openai>=2.45.0",
    "pdfplumber>=0.11.10",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]

[project.optional-dependencies]
poc = [
    "sentence-transformers>=3.0",
]
